--- a/applygrade.html
+++ b/applygrade.html
@@ -1,1 +1,18 @@
-<h1>txt</h1>
+<div class="content">
+    <h1>Apply Grade</h1>
+    <div id="selectedVideoContainer">
+        <h2>Selected Video Path</h2>
+        <p id="selectedVideoPath"></p>
+    </div>
+    <div id="destinationPicker">
+        <h2>Select Destination</h2>
+        <button id="selectDestinationButton">Select Destination</button>
+        <p id="destinationPath"></p>
+    </div>
+    <button id="applyGradeButton">Apply Grade</button>
+    <div id="progressContainer" style="display:none;">
+        <h3>Processing Video</h3>
+        <progress id="progressBar" value="0" max="100"></progress>
+        <p id="progressText">0%</p>
+    </div>
+</div>
