--- a/referenceimage.html
+++ b/referenceimage.html
@@ -1,1 +1,8 @@
-<h1>asd</h1>
+<div class="content">
+    <h1>Reference Image</h1>
+    <button id="processButton">Process Image</button>
+    <div id="result">
+        <h2>Transformed Image</h2>
+        <img id="transformedImage" src="" alt="Transformed Image" style="max-width: 100%;">
+    </div>
+</div>
